added multiselect lists for band maintenance

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -3,5 +3,5 @@ bandform_title=Verwaltung:Band
 bandform_name=Name:
 bandform_save=Speichern
 bandform_error_bandexists=Band existiert schon.
-bandlist_delete=Loeschen
+bandlist_delete=Löschen
 bandlist_add=Neue Band
