Abbruch button für band.xhtml, Löschen einer Band wirkt sich kaskadierend auf ensprechende Tournee und Konzert Entities aus

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -2,6 +2,7 @@
 bandform_title=Verwaltung:Band
 bandform_name=Name:
 bandform_save=Speichern
+bandform_cancel=Abbruch
 bandform_error_bandexists=Band existiert schon.
 bandlist_delete=Löschen
 bandlist_add=Neue Band
