--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -3,6 +3,8 @@ bandform_title=Verwaltung:Band
 bandform_name=Name:
 bandform_save=Speichern
 bandform_cancel=Abbruch
+bandform_bandmusicians=Zugewiesene Musiker:
+bandform_availablemusicians=Verfügbare Musiker:
 bandform_error_bandexists=Band existiert schon.
 bandlist_delete=Löschen
 bandlist_add=Neue Band
