--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
 	<path id="build.classpath">
 		<fileset dir="${jboss.home}/client">
 			<include name="ejb3-persistence.jar" />
-			<include name="jboss-ejb3x.jar" />
+			<include name="jboss-ejb3-client.jar" />
 			<include name="jboss-j2ee.jar" />
 		</fileset>
 		<fileset dir="${webapp_lib.dir}">
@@ -84,6 +84,7 @@
 
 			<metainf dir="dd/ejb">
 				<include name="ejb-jar.xml" />
+				<include name="orm.xml" />
 				<include name="persistence.xml" />
 			</metainf>
 		</jar>
