--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -5,6 +5,7 @@ bandform_save=Speichern
 bandform_cancel=Abbruch
 bandform_bandmusicians=Zugewiesene Musiker:
 bandform_availablemusicians=Verfügbare Musiker:
+bandform_filter=Filter:
 bandform_error_bandexists=Band existiert schon.
 bandlist_delete=Löschen
 bandlist_add=Neue Band
