--- a/build.xml
+++ b/build.xml
@@ -84,7 +84,6 @@
 
 			<metainf dir="dd/ejb">
 				<include name="ejb-jar.xml" />
-				<include name="orm.xml" />
 				<include name="persistence.xml" />
 			</metainf>
 		</jar>
@@ -110,6 +109,8 @@
 				<include name="jsf-facelets.jar"/>
 				<include name="el-api.jar"/>
 				<include name="el-ri.jar"/>
+				<include name="ajax4jsf.jar"/>
+				<include name="oscache-2.3.2.jar"/>
 			</lib>
 		</war>
 	</target>
