implemented use case for konzertsuche

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -9,3 +9,21 @@ bandform_filter=Filter:
 bandform_error_bandexists=Band existiert schon.
 bandlist_delete=Löschen
 bandlist_add=Neue Band
+
+# Anwendungsfall Konzertsuche
+konzertsuche_title=Konzertsuche
+konzertsuche_ort=Veranstaltungsort:
+konzertsuche_fromdate=Zeitraum/Von:
+konzertsuche_todate=Zeitraum/Bis:
+konzertsuche_dateformat=dd.MM.yyyy
+konzertsuche_dateformatlabel=(dd.mm.yyyy)
+konzertsuche_search=Suche
+konzertsuche_cancel=Abbruch
+konzertsuchergebnis_title=Ergebnis der Konzertsuche
+konzertsuchergebnis_interpret=Interpret
+konzertsuchergebnis_location=Veranstaltungsort
+konzertsuchergebnis_date=Datum
+konzertsuchergebnis_tournee=Tournee
+konzertsuchergebnis_dateformat=dd.MM.yyyy
+konzertsuchergebnis_newsearch=Neue Suche
+
