added functionality for ticket button in concert search result page. Injection of TicketController into KonzertController MBean in faces-config. Added ticketbestellung page which is not yet complete.

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -1,4 +1,10 @@
 # Band
+bandlist_title=Liste der Bands
+bandlist_actionheader=Aktion
+bandlist_musicians=Musiker
+bandlist_name=Name
+
+
 bandform_title=Verwaltung:Band
 bandform_name=Name:
 bandform_save=Speichern
@@ -21,9 +27,22 @@ konzertsuche_search=Suche
 konzertsuche_cancel=Abbruch
 konzertsuchergebnis_title=Ergebnis der Konzertsuche
 konzertsuchergebnis_interpret=Interpret
-konzertsuchergebnis_location=Veranstaltungsort
+konzertsuchergebnis_location=Location
+konzertsuchergebnis_address=Ort
 konzertsuchergebnis_date=Datum
 konzertsuchergebnis_tournee=Tournee
 konzertsuchergebnis_dateformat=dd.MM.yyyy
 konzertsuchergebnis_newsearch=Neue Suche
+konzertsuchergebnis_newsearch=Neue Suche
+konzertsuchergebnis_actionheader=Aktion
+konzertsuchergebnis_booktickets=Tickets
+konzertsuchergebnis_soldout=ausverkauft
 
+
+# Anwendungsfall Ticketbestellung
+ticketbestellung_title=Ticketbestellung
+ticketbestellung_interpret=Interpret:
+ticketbestellung_location=Location:
+ticketbestellung_address=Ort:
+ticketbestellung_date=Datum:
+ticketbestellung_tournee=Tournee:
