--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,7 @@
 	
 	<property name="home.dir" value="." />
 	<property name="src.dir" value="${home.dir}/src" />
+	<property name="test.src.dir" value="${home.dir}/test/src" />
 	<property name="build.dir" value="${home.dir}/build" />
 	<property name="jboss.server.dir" value="${jboss.home}/server/${jboss.server}" />
 	<property name="jboss.deploy.dir" value="${jboss.server.dir}/deploy" />
@@ -39,14 +40,34 @@
 		<fileset dir="${jboss.home}/client">
 			<include name="ejb3-persistence.jar" />
 			<include name="jboss-ejb3-client.jar" />
+			<include name="jboss-ejb3x.jar" />
 			<include name="jboss-j2ee.jar" />
 		</fileset>
 		<fileset dir="${webapp_lib.dir}">
 			<include name="jsf-api.jar" />
 			<include name="log4j-1.2.14.jar" />
+			<include name="javax.servlet.jar" />
 		</fileset>
 	</path>
 
+	<path id="test.classpath">
+		<fileset dir="${jboss.embedded.home}/lib">
+			<include name="jboss-ejb3-all.jar" />
+			<include name="hibernate-all.jar" />
+			<include name="thirdparty-all.jar" />
+			<include name="jms-ra.jar" />
+		</fileset>
+		<fileset dir="${webapp_lib.dir}">
+			<include name="jsf-api.jar" />
+			<include name="log4j-1.2.14.jar" />
+			<include name="javax.servlet.jar" />
+			<include name="easymock.jar"/>
+			<include name="junit-4.1.jar"/>
+		</fileset>
+		<pathelement location="${build.dir}/classes"/>		
+		<pathelement location="${build.dir}/test"/>
+	</path>
+	
 	<target name="main" description="Does a full build of the J2EE application">
 		<antcall target="clean" />
 		<antcall target="package-ejb" />
@@ -62,6 +83,7 @@
 		<mkdir dir="${build.dir}" />
 		<mkdir dir="${build.dir}/classes" />
 		<mkdir dir="${build.dir}/jar" />
+		<mkdir dir="${build.dir}/test" />
 	</target>
 
 	<target name="compile" depends="prepare" description="Compiles the source code">
@@ -70,6 +92,37 @@
 		</javac>
 	</target>
 
+	<target name="compile-test" depends="compile" description="Compiles the tests and runs them">
+		<javac destdir="${build.dir}/test" classpathref="test.classpath" debug="on">
+			<src path="${test.src.dir}" />
+		</javac>
+	</target>
+		
+	<!-- Kopiert die notwendigen Konfigurations- und Klassendateien in das Test-Verzeichnis -->
+	<target name="prepare-test">
+		<copy  todir="${build.dir}/test" >
+			<fileset dir="${home.dir}/test/conf"  />
+			<fileset dir="${home.dir}/dd/ejb"  />
+			<fileset dir="${build.dir}/classes" /> 
+		</copy>
+	</target>
+	
+	<target name="junit" depends="compile-test,prepare-test">
+	    <junit printsummary="on" 
+	           fork="false" 
+	           haltonfailure="false"
+	           failureproperty="tests.failed"
+	           showoutput="true">
+
+	      <classpath refid="test.classpath"/>
+	      <formatter type="brief" usefile="false"/>
+
+	      <test name="de.ejb3buch.ticket2rock.AllTests"/>
+	    
+	    </junit>		
+	</target>
+	
+	
 	<target name="package-ejb" depends="compile" description="Builds the EJB module (*.jar)">
 		<jar jarfile="${build.dir}/jar/${ant.project.name}.jar">
 			<fileset dir="${build.dir}/classes">
