enhanced jsf page for ticket order. Ticketkontingent is eavluated in TicketController and corresponding expression is selected from the Message.properties file

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -46,3 +46,8 @@ ticketbestellung_location=Location:
 ticketbestellung_address=Ort:
 ticketbestellung_date=Datum:
 ticketbestellung_tournee=Tournee:
+ticketbestellung_ticketkontingent=Verfügbare Tickets:
+ticketbestellung_ticketanzahl=Anzahl der Tickets:
+ticketbestellung_order=Bestellen
+ticketbestellung_moreThanHundred=mehr als Hundert
+ticketbestellung_cancel=Abbruch
