Abhaengigkeiten zum JBoss im Buildfile entfernt, Embedded JBoss aufgenommen.

--- a/build.properties.template
+++ b/build.properties.template
@@ -1,5 +1,5 @@
 # ticket2rock build properties
 
-jboss.home=D:/jboss-4.0.5.GA
+jboss.home=/jboss-4.0.5.GA
 jboss.server=default
-jboss.embedded.home=d:/jboss-EJB-3.0_Embeddable_ALPHA_9
+
