--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/junit-4.1.jar"/>
 	<classpathentry kind="lib" path="lib/thirdparty-all.jar"/>
 	<classpathentry kind="lib" path="lib/EasyGloss.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-jaxws.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
