Texte für den Anwendungsfall "Anwendungsfall Bestellung stornieren" ergänzt

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -16,14 +16,14 @@ bandform_error_bandexists=Band existiert schon.
 bandlist_delete=Löschen
 bandlist_add=Neue Band
 
-# Anwendungsfall Konzertsuche
-konzertsuche_title=Konzertsuche
+# Anwendungsfall Konzert suchen
+konzertsuche_title=Konzert suchen
 konzertsuche_ort=Veranstaltungsort:
 konzertsuche_fromdate=Zeitraum/Von:
 konzertsuche_todate=Zeitraum/Bis:
 konzertsuche_dateformat=dd.MM.yyyy
 konzertsuche_dateformatlabel=(dd.mm.yyyy)
-konzertsuche_search=Suche
+konzertsuche_search=Suchen
 konzertsuche_cancel=Abbruch
 konzertsuchergebnis_title=Ergebnis der Konzertsuche
 konzertsuchergebnis_interpret=Interpret
@@ -38,7 +38,6 @@ konzertsuchergebnis_actionheader=Aktion
 konzertsuchergebnis_booktickets=Tickets
 konzertsuchergebnis_soldout=ausverkauft
 
-
 # Anwendungsfall Ticketbestellung
 ticketbestellung_title=Ticketbestellung
 ticketbestellung_interpret=Interpret:
@@ -51,3 +50,10 @@ ticketbestellung_ticketanzahl=Anzahl der Tickets:
 ticketbestellung_order=Bestellen
 ticketbestellung_moreThanHundred=mehr als Hundert
 ticketbestellung_cancel=Abbruch
+
+# Anwendungsfall Bestellung stornieren
+stornierung_title=Bestellung stornieren
+stornierung_bestellnummer=Bestellnummer
+stornierung_storno=Stornieren
+stornierung_cancel=Abbruch
+stornierungergebnis_title=Bestellung stornieren
