bag icon in header bar reflects whether the session contains ticket reservationns. Ticket order number is being validated in TicketController against the available Ticketcontingent.

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -49,7 +49,16 @@ ticketbestellung_ticketkontingent=Verfügbare Tickets:
 ticketbestellung_ticketanzahl=Anzahl der Tickets:
 ticketbestellung_order=Bestellen
 ticketbestellung_moreThanHundred=mehr als Hundert
+ticketbestellung_invalidNumber=Invalide Ticketanzahl
+ticketbestellung_exceedsContingent=Diese Bestellung überschreitet das Ticketkontingent
 ticketbestellung_cancel=Abbruch
+
+# Reservierungsmeldung
+reservierungsmeldung_title=Reservierungsbestätigung
+reservierungsmeldung_text=Die Tickets wurden reserviert und in Ihren Warenkorb gelegt.
+reservierungsmeldung_auswahl=Reservierungsbestätigung
+reservierungsmeldung_showreservations=Warenkorb
+reservierungsmeldung_newsearch=Neue Suche
 
 # Anwendungsfall Bestellung stornieren
 stornierung_title=Bestellung stornieren
