Änderungen am Layout,Weitere Arbeiten am Use case: Bestellvorgang

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -66,3 +66,28 @@ stornierung_bestellnummer=Bestellnummer
 stornierung_storno=Stornieren
 stornierung_cancel=Abbruch
 stornierungergebnis_title=Bestellung stornieren
+
+# Bestellungen
+bestellungen_title=Ihre Ticketbestellungen
+bestellungen_interpret=Interpret
+bestellungen_address=Ort
+bestellungen_numberoftickets=Ticketanzahl
+bestellungen_delete=Löschen
+bestellungen_numberoftickets=Ticketanzahl
+bestellungen_dateformat=dd.MM.yyyy
+bestellungen_dateOfEvent=Datum
+bestellungen_payment=Zur Kasse ...
+
+# Kasse
+kasse_title=Ticket Kasse
+kasse_interpret=Interpret
+kasse_address=Ort
+kasse_numberoftickets=Ticketanzahl
+kasse_delete=Löschen
+kasse_numberoftickets=Ticketanzahl
+kasse_dateformat=dd.MM.yyyy
+kasse_dateOfEvent=Datum
+kasse_email=Ihre Email Adresse:
+kasse_payment=Zahlen
+
+
