Ticketbestellungen werden durch PrePersist callback Methode der Kunden-Entity Bean persisitiert.

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -90,4 +90,9 @@ kasse_dateOfEvent=Datum
 kasse_email=Ihre Email Adresse:
 kasse_payment=Zahlen
 
+# Ticketkaufmeldung
+ticketkaufmeldung_title=Vielen Dank!
+ticketkaufmeldung_text=Ihr Ticketkauf wurde erfolgreich durchgeführt.
+ticketkaufmeldung_ok=OK
+
 
