Konzert hat neues Attribut Ticketpreis, das beim Bestellvorgang berücksichtigt wird. Bestellpreis wird kalkuliert. Bestellnummer wird nach Ticketkauf dem Käufer angezeigt.

--- a/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -34,6 +34,7 @@ konzertsuchergebnis_tournee=Tournee
 konzertsuchergebnis_dateformat=dd.MM.yyyy
 konzertsuchergebnis_newsearch=Neue Suche
 konzertsuchergebnis_newsearch=Neue Suche
+konzert_price=Ticketpreis
 konzertsuchergebnis_actionheader=Aktion
 konzertsuchergebnis_booktickets=Tickets
 konzertsuchergebnis_soldout=ausverkauft
@@ -76,6 +77,8 @@ bestellungen_delete=Löschen
 bestellungen_numberoftickets=Ticketanzahl
 bestellungen_dateformat=dd.MM.yyyy
 bestellungen_dateOfEvent=Datum
+bestellungen_totalprice=Gesamtpreis:
+bestellungen_ordernumber=Bestellnummer
 bestellungen_payment=Zur Kasse ...
 
 # Kasse
@@ -89,10 +92,12 @@ kasse_dateformat=dd.MM.yyyy
 kasse_dateOfEvent=Datum
 kasse_email=Ihre Email Adresse:
 kasse_payment=Zahlen
+kasse_total=Geamtbetrag:
 
 # Ticketkaufmeldung
 ticketkaufmeldung_title=Vielen Dank!
 ticketkaufmeldung_text=Ihr Ticketkauf wurde erfolgreich durchgeführt.
+ticketkaufmeldung_bill=Ihre Rechnungssumme beträgt: 
 ticketkaufmeldung_ok=OK
 
 
