--- a/build.properties.template
+++ b/build.properties.template
@@ -1,5 +1,10 @@
 # ticket2rock build properties
 
+# Der Pfad des JBoss-Installationsverzeichnisses
+# ACHTUNG:
+# Als Verzeichnistrenner bitte auch unter Windows '/' verwenden, nicht '\'
 jboss.home=/jboss-4.0.5.GA
+
+# Die zu verwendende JBoss-Serverkonfiguration
 jboss.server=default
 
