--- a/dd/web/web.xml
+++ b/dd/web/web.xml
@@ -45,12 +45,18 @@
       <param-value>com.sun.facelets.FaceletViewHandler</param-value>
     </context-param>
     
+    
+    <context-param>
+
+        <param-name>org.richfaces.SKIN</param-name>
+
+        <param-value>blueSky</param-value>
+
+    </context-param>
+    
 	
     <!-- MyFaces -->
 
-    <listener>
-        <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
-    </listener>
     
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -84,18 +90,25 @@
 		<url-pattern>*.faces</url-pattern>
 	</servlet-mapping>
 	
-	<filter>
-        <display-name>Ajax4jsf Filter</display-name>
-        <filter-name>ajax4jsf</filter-name>
-        <filter-class>org.ajax4jsf.Filter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>ajax4jsf</filter-name>
+	<filter> 
+        <display-name>RichFaces Filter</display-name> 
+        <filter-name>richfaces</filter-name> 
+        <filter-class>org.ajax4jsf.Filter</filter-class> 
+    </filter> 
+
+    <filter-mapping> 
+
+        <filter-name>richfaces</filter-name> 
+
         <servlet-name>Faces Servlet</servlet-name>
+
         <dispatcher>REQUEST</dispatcher>
+
         <dispatcher>FORWARD</dispatcher>
+
         <dispatcher>INCLUDE</dispatcher>
-    </filter-mapping>	
+
+    </filter-mapping>
 	
 	<welcome-file-list>
 		<welcome-file>facesindex.html</welcome-file>
