--- a/dd/web/web.xml
+++ b/dd/web/web.xml
@@ -1,69 +1,65 @@
 <?xml version="1.0" ?>
 
-<!--
-	Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell" (dpunkt).
-	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
-	Rockkonzerte auf Basis von EJB 3.0 und JavaServer Faces.
-	
-	Copyright (C) 2006
-	Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek,
-	Carsten Sahling, Roman Schloemmer
-	
-	This program is free software; you can redistribute it and/or
-	modify it under the terms of the GNU General Public License
-	as published by the Free Software Foundation; either version 2
-	of the License, or (at your option) any later version.
-	
-	This program is distributed in the hope that it will be useful,
-	but WITHOUT ANY WARRANTY; without even the implied warranty of
-	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-	GNU General Public License for more details.
-	
-	You should have received a copy of the GNU General Public License
-	along with this program; if not, write to the Free Software
-	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
--->
+	<!--
+		Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell"
+		(dpunkt). Es implementiert eine einfache Webanwendung zur
+		Onlinebuchung von Tickets für Rockkonzerte auf Basis von EJB 3.0 und
+		JavaServer Faces. Copyright (C) 2006 Jo Ehm, Dierk Harbeck, Stefan M.
+		Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek, Carsten Sahling,
+		Roman Schloemmer This program is free software; you can redistribute
+		it and/or modify it under the terms of the GNU General Public License
+		as published by the Free Software Foundation; either version 2 of the
+		License, or (at your option) any later version. This program is
+		distributed in the hope that it will be useful, but WITHOUT ANY
+		WARRANTY; without even the implied warranty of MERCHANTABILITY or
+		FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
+		for more details. You should have received a copy of the GNU General
+		Public License along with this program; if not, write to the Free
+		Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+		02110-1301, USA.
+	-->
 
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	version="2.4">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <context-param>
-        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-        <param-value>client</param-value>
-    </context-param>
-	
-    <context-param>
-        <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-        <param-value>.xhtml</param-value>
-    </context-param>
-    
-    <!-- Viewhandler Definition fuer Unterstuezung von facelets and ajax4jsf -->
-    <context-param>
-      <param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
-      <param-value>com.sun.facelets.FaceletViewHandler</param-value>
-    </context-param>
-    
-    
-    <context-param>
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>client</param-value>
+	</context-param>
 
-        <param-name>org.richfaces.SKIN</param-name>
+	<context-param>
+		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+		<param-value>.xhtml</param-value>
+	</context-param>
 
-        <param-value>blueSky</param-value>
+	<!--
+		Viewhandler Definition fuer Unterstuezung von facelets and ajax4jsf
+	-->
+	<context-param>
+		<param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
+		<param-value>com.sun.facelets.FaceletViewHandler</param-value>
+	</context-param>
 
-    </context-param>
-    
-	
-    <!-- MyFaces -->
 
-    
+	<context-param>
+
+		<param-name>org.richfaces.SKIN</param-name>
+
+		<param-value>blueSky</param-value>
+
+	</context-param>
+
+
+	<!-- MyFaces -->
+
+
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
-	</servlet>   
-    <!-- end of MyFaces servlet definition  -->
+	</servlet>
+	<!-- end of MyFaces servlet definition  -->
 
 	<servlet>
 		<servlet-name>DemoServlet</servlet-name>
@@ -73,8 +69,8 @@
 		<servlet-name>BeanStatisticsServlet</servlet-name>
 		<jsp-file>/BeanStatistics.jsp</jsp-file>
 	</servlet>
-	
-	
+
+
 	<servlet-mapping>
 		<servlet-name>DemoServlet</servlet-name>
 		<url-pattern>/demo</url-pattern>
@@ -89,30 +85,30 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.faces</url-pattern>
 	</servlet-mapping>
-	
-	<filter> 
-        <display-name>RichFaces Filter</display-name> 
-        <filter-name>richfaces</filter-name> 
-        <filter-class>org.ajax4jsf.Filter</filter-class> 
-    </filter> 
 
-    <filter-mapping> 
+	<filter>
+		<display-name>RichFaces Filter</display-name>
+		<filter-name>richfaces</filter-name>
+		<filter-class>org.ajax4jsf.Filter</filter-class>
+	</filter>
 
-        <filter-name>richfaces</filter-name> 
+	<filter-mapping>
 
-        <servlet-name>Faces Servlet</servlet-name>
+		<filter-name>richfaces</filter-name>
 
-        <dispatcher>REQUEST</dispatcher>
+		<servlet-name>Faces Servlet</servlet-name>
 
-        <dispatcher>FORWARD</dispatcher>
+		<dispatcher>REQUEST</dispatcher>
 
-        <dispatcher>INCLUDE</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
 
-    </filter-mapping>
-	
+		<dispatcher>INCLUDE</dispatcher>
+
+	</filter-mapping>
+
 	<welcome-file-list>
 		<welcome-file>facesindex.html</welcome-file>
 	</welcome-file-list>
-	
-	
+
+
 </web-app>
